# evsGoQuantAkshatVerma

./: Anchor.toml  Cargo.toml  README.md
backend/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: api.rs  auto_deposit.rs  config.rs  delegation_manager.rs  main.rs  session_manager.rs  transaction_signer.rs  vault_monitor.rs
docs/: architecture.md  backend.md  program.md  security.md  user_guide.md
programs/ephemeral_vault/: Cargo.toml
programs/ephemeral_vault/src/: lib.rs
tests/: ephemeral_vault.ts
