[workspace]
members = [
    "programs/ephemeral_vault",
    "backend",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anchor-lang = "0.29.0"
solana-program = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
