[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum = { version = "0.7", features = ["ws", "macros", "json"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
serde_qs = "0.12"
http = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
# Solana / crypto
solana-sdk = "1.18.0"
solana-client = "1.18.0"
rand = "0.8"
ring = "0.17"
base64 = "0.22"
